<resources>
    <string name="app_name">DEVPRO</string>
    <string name="username">DEVPRO</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="IAmACompany">Register a company</string>
    <string name="Next">Next</string>
    <string name="search">Search</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="edit_profile">Edit profile</string>
    <string name="subscription">Subscription</string>
    <string name="requests">Requests</string>

    <!-- Checkout activity -->
    <string name="title_activity_payment">Payment</string>
    <string name="checkout_item_description">Description</string>
    <string name="googlepay_status_unavailable" translatable="false">Unfortunately, Google Pay is
        not available on this phone.
    </string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for
        %s!
    </string>
    <string name="buy">BUY</string>
    <string name="e_mail">e-mail</string>
    <string name="Phone">Phone</string>
    <string name="password">Password</string>
    <string name="save_changes">Save changes</string>
    <string name="pay_subscrition">Pay subscrition</string>
    <string name="change_password">Change password?</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="card_number">Card Number</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="expiration">Expiration</string>
    <string name="cvv">CVV</string>
    <string name="pay">PAY</string>
    <string name="company_details">Company Details</string>
    <string name="company_owner_last_name">Company owner last name</string>
    <string name="company_owner_first_name">Company owner first name</string>
    <string name="company_phone_number">Company Phone Number</string>
    <string name="company_registration_number">Registration Number</string>
    <string name="company_name">Company Name</string>
    <string name="view_accounts">View Accounts</string>
    <string name="view_companies">View companies</string>
    <string name="view_requests">View requests</string>
    <string name="share">Share</string>
    <string name="get_link">Get link</string>
    <string name="preview">Preview</string>
    <string name="make_a_copy">Make a Copy</string>
    <string name="email_a_copy">Email a Copy</string>
    <string name="show_bottom_sheet">Show Bottom Sheet</string>
    <string name="show_bottom_sheet_dialog">Show Bottom Sheet Dialog</string>
    <string name="show_bottom_sheet_dialog_fragment">Show Bottom Sheet Dialog Fragment</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="choose">Choose</string>
    <string name="upload">Upload</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="deny">Deny</string>
    <string name="accept">Accept</string>
    <string name="Contact">Contact</string>
    <string name="unban_account">Unban Account</string>
    <string name="add_admin">Add Admin</string>
    <string name="admin_e_mail">Admin e-mail</string>
    <string name="admin_password">Admin password</string>
    <string name="edit_company_details">Edit company details</string>
    <string name="register_company_manager">Register Company Manager</string>
    <string name="view_mangers">View Mangers</string>
    <string name="admin_last_name">Admin Last Name</string>
    <string name="admin_first_name">Admin First Name</string>
    <string name="admin_username">Admin username</string>
    <string name="admin_phone_number">Admin Phone Number</string>
    <string name="street_address_p_o_box">Street address, P.O box</string>
    <string name="apartment_suite_unit_building_floor">Apartment, suite, unit, building, floor</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="country">Country</string>
    <string name="register_company">Register Company</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="edit_details">Edit Details</string>
    <string name="accepted_requests">Accepted Requests</string>
    <string name="add_location">Add Location</string>
    <string name="add_description">Add Description</string>
    <string name="add_service">Add Service</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="change_email">Change Email</string>
    <string name="change_phone">Change Phone</string>
    <string name="change_company_address">Change Company Address</string>
    <string name="save_location">Save Location</string>
    <string name="delete_service">Delete Service</string>
    <string name="service">Service</string>
    <string name="adauga_serviciu">Adauga Serviciu</string>
    <string name="delete_selected_service">Delete Selected Service</string>
    <string name="address">Address</string>
    <string name="services">Services</string>
    <string name="select">Select</string>
    <string name="add_image">Add image</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="save_details">Save Details</string>
    <string name="next">Next</string>
    <string name="change_description">Change Description</string>
    <string name="change_image">Change Image</string>
    <string name="change_location">Change Location</string>
    <string name="content_description_media" />
    <string name="title">Titlu</string>
    <string name="content_description">content description</string>
    <string name="text_secundar">Text secundar</string>
    <string name="supporting_text">Supporting text</string>
    <string name="action_1">Action 1</string>
    <string name="action_2">Action 2</string>
    <string name="date">Date</string>
    <string name="serviciu">Serviciu</string>
    <string name="phone_si_email">Phone si Email</string>
    <string name="name">Name</string>
    <string name="time_slot">Time slot</string>
    <string name="interval">Interval</string>
    <string name="minus">-</string>
    <string name="send_request">Send request</string>
    <string name="select_service">Select service</string>
    <string name="username3">Username :</string>


</resources>