<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CompanyAdressActivity">

    <EditText
        android:id="@+id/save_addr_country"
        android:layout_width="321dp"
        android:layout_height="67dp"
        android:gravity="center|left"
        android:hint="@string/country"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.665" />

    <EditText
        android:id="@+id/sava_addr_city"
        android:layout_width="321dp"
        android:layout_height="67dp"
        android:gravity="center|left"
        android:hint="@string/city"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.378" />

    <EditText
        android:id="@+id/save_addr_postal"
        android:layout_width="321dp"
        android:layout_height="67dp"
        android:gravity="center|left"
        android:hint="@string/postal_code"
        android:paddingStart="20dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.518" />

    <EditText
        android:id="@+id/save_addr_line2"
        android:layout_width="321dp"
        android:layout_height="67dp"
        android:gravity="center|left"
        android:hint="@string/apartment_suite_unit_building_floor"
        android:paddingStart="20dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243" />

    <EditText
        android:id="@+id/save_addr_line1"
        android:layout_width="321dp"
        android:layout_height="67dp"
        android:gravity="center|left"
        android:hint="@string/street_address_p_o_box"
        android:paddingStart="20dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <Button
        android:id="@+id/save_adress_button"
        android:layout_width="265dp"
        android:layout_height="67dp"
        android:background="#988000"
        android:backgroundTint="#1047DF"
        android:text="@string/save_location"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#CF1313"
        android:textColorLink="#950909"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.834" />
</androidx.constraintlayout.widget.ConstraintLayout>