<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterCompanyTwo">

    <EditText
        android:id="@+id/register_company_two_lastname"
        android:layout_width="248dp"
        android:layout_height="45dp"
        android:gravity="center|left"
        android:hint="@string/company_owner_last_name"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_user_two_info2"
        app:layout_constraintVertical_bias="0.415"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <EditText
        android:id="@+id/register_company_two_firstname"
        android:layout_width="248dp"
        android:layout_height="45dp"
        android:gravity="center|left"
        android:hint="@string/company_owner_first_name"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_user_two_info2"
        app:layout_constraintVertical_bias="0.283"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <EditText
        android:id="@+id/register_company_two_phone"
        android:layout_width="248dp"
        android:layout_height="45dp"
        android:gravity="center|left"
        android:hint="@string/company_phone_number"
        android:paddingStart="20dp"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_company_two_cui"
        app:layout_constraintVertical_bias="0.384"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/register_company_two_cui"
        android:layout_width="248dp"
        android:layout_height="45dp"
        android:gravity="center|left"
        android:hint="@string/company_registration_number"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_user_two_info2"
        app:layout_constraintVertical_bias="0.164"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <TextView
        android:id="@+id/register_user_two_info2"
        android:layout_width="252dp"
        android:layout_height="72dp"
        android:gravity="center"
        android:text="@string/company_details"
        android:textAlignment="center"
        android:textColor="#0BCF5C"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <EditText
        android:id="@+id/register_company_two_name"
        android:layout_width="248dp"
        android:layout_height="45dp"
        android:gravity="center|left"
        android:hint="@string/company_name"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toTopOf="@+id/register_company_two_cui"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_user_two_info2"
        app:layout_constraintVertical_bias="0.632"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/register_company_two_next"
        android:layout_width="240dp"
        android:layout_height="61dp"
        android:text="@string/Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_company_two_phone"
        app:layout_constraintVertical_bias="0.751" />
</androidx.constraintlayout.widget.ConstraintLayout>