<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PaymentActivity">

    <EditText
        android:id="@+id/payment_number"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:gravity="start"
        android:hint="@string/card_number"
        android:includeFontPadding="false"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/payment_holder"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:gravity="start"
        android:hint="@string/cardholder_name"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_number"
        app:layout_constraintVertical_bias="0.038"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/payment_exp"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:hint="@string/expiration"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/payment_cvv"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_holder"
        app:layout_constraintVertical_bias="0.059"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/payment_cvv"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:hint="@string/cvv"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_holder"
        app:layout_constraintVertical_bias="0.059"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/payment_pay"
        android:layout_width="167dp"
        android:layout_height="53dp"
        android:text="@string/pay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_holder"
        app:layout_constraintVertical_bias="0.844" />
</androidx.constraintlayout.widget.ConstraintLayout>